--- a/trunk/therapyreminder/android/res/xml/config.xml
+++ b/trunk/therapyreminder/android/res/xml/config.xml
@@ -1,40 +1,50 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="it.mate.therapyreminder" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    
-  <name>Hello Cordova</name>
+
+
   <preference name="loglevel" value="DEBUG" />
-  <feature name="App">
-      <param name="android-package" value="org.apache.cordova.App" />
+  <feature name="Whitelist">
+    <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
+    <param name="onload" value="true" />
   </feature>
   <feature name="Device">
-      <param name="android-package" value="org.apache.cordova.device.Device" />
+    <param name="android-package" value="org.apache.cordova.device.Device" />
   </feature>
   <feature name="InAppBrowser">
-      <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
+    <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
   </feature>
   <feature name="Globalization">
-      <param name="android-package" value="org.apache.cordova.globalization.Globalization" />
+    <param name="android-package" value="org.apache.cordova.globalization.Globalization" />
   </feature>
   <feature name="LocalNotification">
-      <param name="android-package" value="de.appplant.cordova.plugin.localnotification.LocalNotification" />
+    <param name="android-package" value="de.appplant.cordova.plugin.localnotification.LocalNotification" />
   </feature>
+  <allow-intent href="market:*" />
   <name>TherapyReminder</name>
   <description>
-      A sample Apache Cordova application that responds to the deviceready event.
+    A sample Apache Cordova application that responds to the deviceready event.
   </description>
   <author email="dev@cordova.apache.org" href="http://cordova.io">
-      Apache Cordova Team
+    Apache Cordova Team
   </author>
   <content src="index.html" />
   <access origin="*" />
-  
+  <allow-intent href="http://*/*" />
+  <allow-intent href="https://*/*" />
+  <allow-intent href="tel:*" />
+  <allow-intent href="sms:*" />
+  <allow-intent href="mailto:*" />
+  <allow-intent href="geo:*" />
+
+
   <feature name="NativePropertiesPlugin">
     <param name="android-package" value="it.mate.therapyreminder.plugin.NativePropertiesPlugin" />
   </feature>
-  
+
   <!-- 28/06/2014 -->
   <feature name="Calendar">
     <param name="android-package" value="nl.xservices.plugins.Calendar" />
   </feature>
-    
+
+
 </widget>
